src/test/deca/context/valid/return/return_int_simple.deca
// Description :
//    Méthode retournant une valeur entière simple.
//
// Resultats :
//    OK

class A {
    int f() {
        return 1;
    }
}

{
    A a = new A();
    println(a.f());
}

