src/test/deca/context/invalid/return/return_in_loop_not_guaranteed_custom.deca
// Description :
// return présent seulement dans une boucle
//
// Resultats :
// Erreur contextuelle
// Ligne 6 : return non garanti

class N {
    int f() {
        while (false) {
            return 1;
        }
    }
}
